--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx tsx --test src/**/*.test.ts",
+    "test:nested": "npx tsx --test src/test-nested-types.test.ts",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "prepare": "husky",
-    "jsontozod": "tsx jsontozod.ts"
+    "jsontozod": "tsx src/jsontozod.ts"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
