--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "dev": "tsc --watch",
     "test": "npx tsx --test src/**/*.test.ts",
     "test:nested": "npx tsx --test src/test-nested-types.test.ts",
+    "test:integration": "npx tsx src/test-integration.ts",
+    "test:builder": "npx tsx src/builder/test-builder.test.ts",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "prepare": "husky",
-    "jsontozod": "tsx src/jsontozod.ts"
+    "jsontozod": "tsx src/jsontozod.ts",
+    "db:build": "tsx src/cli/index.ts build",
+    "db:validate": "tsx src/cli/index.ts validate",
+    "db:info": "tsx src/cli/index.ts info"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
