feat: implement fluent API for type-safe query operations
- Replace string-based operators with fluent API methods
- Add FieldQueryBuilder for chained query operations
- Implement QueryOperator enum for type safety
- Update examples and documentation to use fluent syntax
- Add migration guide and cleanup temporary comparison files

Benefits:
- 100% type safety with IntelliSense support
- Self-documenting query syntax (.greaterThan vs '>')
- Backward compatible implementation
- Zero runtime performance impact

Examples:
- .where('age').greaterThan(25) instead of .where('age', '>', 25)
- .where('name').contains('John') instead of .where('name', 'contains', 'John')
- .where('status').equals('active') instead of .where('status', 'active')

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jsontozod": "tsx src/jsontozod.ts",
     "db:build": "tsx src/cli/index.ts build",
     "db:validate": "tsx src/cli/index.ts validate",
-    "db:info": "tsx src/cli/index.ts info"
+    "db:info": "tsx src/cli/index.ts info",
+    "example": "tsx example-artist-query.ts"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
