feat: implement true compile-time type safety for database queries
Add TypeSafeQueryBuilder that constrains field names to actual record properties.
Prevents typos and invalid field access at compile time.
Includes nested field access support and comprehensive test suite.

Key benefits:
- Field names validated at compile time
- IntelliSense autocomplete for available fields
- Prevents runtime errors from invalid queries
- Zero performance overhead

Resolves issue where .query().where('nonExistentField') was allowed at compile time.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*", "example-*.ts", "tests/**/*"],
-  "exclude": ["node_modules", "dist", "db"]
+  "include": ["src/**/*", "example-*.ts", "type-safety-demo.ts", "*-demo.ts", "tests/**/*"],
+  "exclude": ["node_modules", "dist", "db", "artist-db"]
 }
