--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "browser": "dist/browser.js",
+  "browser": "dist/src/browser.js",
   "bin": {
     "antipattern-db": "dist/cli/index.js"
   },
