--- a/example-app/package.json
+++ b/example-app/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "antipattern-db": "file:..",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
